force-app/main/default/objects/Documantation__c/Documantation__c.object-meta.xml
<CustomObject>
    <label>Documantation</label>
    <nameField>
        <label>Documantation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documantations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>