force-app/main/default/objects/Documantation__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Documantations</relationshipLabel>
    <relationshipName>Documantations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>